--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 Manage your cap table online.
+<br><br>
+- Keep track of your shares<br>
+- Do it yourself in minutes<br>
+- Automated integrity checking<br>
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeKv77rWS2NPnWIjBhwfaHvaso7pXwfxbN-SYDmpIKdW-BPVw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
