--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 					<div class="row">
 						<section class="4u 12u$(medium) 12u$(small)">
 							<h3>Address</h3>
+              Ledgy Ltd.<br>
 							Forchstrasse 60<br>
 							8008 Zürich
 						</section>
