--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">Ledgy</a></h1>
+				<!-- <h1><a href="index.html">Ledgy</a></h1> -->
 				<!--<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -66,14 +66,11 @@
 			<section id="one" class="wrapper style1 align-center">
 				<div class="container">
 					<h2>Available to early testers in September</h2>
-					<ul class="actions">
-						<li>
-							<form action="https://formspree.io/ben+beta@ledgy.com"method="POST">
-						    <input type="email" placeholder="your.name@email.com">
-						    <input type="submit" value="Apply now" class="button big">
-							</form>
-						</li>
-					</ul>
+						<form action="https://formspree.io/apply@ledgy.com" method="POST">
+							<input type="text" placeholder="Your Name"  style="display: inline;">
+							<input type="email" placeholder="your.name@email.com">
+							<input type="submit" value="Apply Now" class="button">
+						</form>
 				</div>
 			</section>
 
