--- a/index_new.html
+++ b/index_new.html
@@ -79,8 +79,7 @@
 				<div class="container">
 					<div class="row">
 						<section class="4u 12u$(medium) 12u$(small)">
-							<h3>Address</h3>
-              Ledgy Ltd.<br>
+							<h3>Ledgy Ltd.</h3>
 							Forchstrasse 60<br>
 							8008 Zürich
 						</section>
