--- a/index_new.html
+++ b/index_new.html
@@ -67,8 +67,9 @@
 				<div class="container">
 					<h2>Available to early testers in September</h2>
 						<form action="https://formspree.io/apply@ledgy.com" method="POST">
-							<input type="text" placeholder="Your Name"  style="display: inline;">
-							<input type="email" placeholder="your.name@email.com">
+							<input type="text" placeholder="Your Name" name="Name">
+							<input type="email" placeholder="your.name@email.com" name="Mail">
+							<input type="hidden" name="_next" value="ledgy.com" />
 							<input type="submit" value="Apply Now" class="button">
 						</form>
 				</div>
