--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<div class="row 200%">
 					<section class="4u 12u$(small)">
 						<i class="icon big rounded fa-pie-chart"></i>
-						<p>Keep track of your shares</p>
+						<p>Keep track of your company's shares</p>
 					</section>
 					<section class="4u 12u$(small)">
 						<i class="icon big rounded fa-pencil"></i>
@@ -65,7 +65,7 @@
 		<!-- One -->
 			<section id="one" class="wrapper style1 align-center">
 				<div class="container">
-					<h2>Available to early testers in September</h2>
+					<h2>Available to early adopters in September</h2>
 						<form action="https://formspree.io/apply@ledgy.com" method="POST">
 							<input type="text" placeholder="Your Name" name="Name">
 							<input type="email" placeholder="your.name@email.com" name="Mail">
@@ -79,7 +79,7 @@
 				<div class="container">
 					<div class="row">
 						<section class="4u 12u$(medium) 12u$(small)">
-							<h3>Ledgy Ltd.</h3>
+							<h3>Ledgy AG</h3>
 							Forchstrasse 60<br>
 							8008 Zürich
 						</section>
