--- a/index.html
+++ b/index.html
@@ -43,24 +43,30 @@
 				</nav>-->
 			</header>
 
-		<!-- Banner -->
-			<section id="banner">
-				<h2>Manage your cap table online</h2>
-				<div class="row 200%">
-					<section class="4u 12u$(small)">
-						<i class="icon big rounded fa-pie-chart"></i>
-						<p>Keep track of your company's shares</p>
-					</section>
-					<section class="4u 12u$(small)">
-						<i class="icon big rounded fa-pencil"></i>
-						<p>Do it yourself in minutes</p>
-					</section>
-					<section class="4u$ 12u$(small)">
-						<i class="icon big rounded fa-check-circle-o"></i>
-						<p>Automated integrity checking</p>
-					</section>
-				</row>
-			</section>
+			<!-- Banner -->
+			  <section id="banner">
+			    <h2>Manage your cap table online</h2>
+			    <div class="row 200%">
+			      <section class="4u 12u$(small)">
+			        <!-- <i class="icon big rounded fa-pie-chart"></i>
+			        <p>Keep track of your company's shares</p> -->
+			        <i class="icon big rounded fa-flag-o"></i>
+			        <p>All information in one place</p>
+			      </section>
+			      <section class="4u 12u$(small)">
+			        <!-- <i class="icon big rounded fa-pencil"></i>
+			        <p>Do it yourself in minutes</p> -->
+			        <i class="icon big rounded fa-clock-o"></i>
+			        <p>See the full history</p>
+			      </section>
+			      <section class="4u$ 12u$(small)">
+			        <!-- <i class="icon big rounded fa-check-circle-o"></i>
+			        <p>Automated integrity checking</p> -->
+			        <i class="icon big rounded fa-check-circle-o"></i>
+			        <p>Trust your data</p>
+			      </section>
+			    </row>
+			  </section>
 
 		<!-- One -->
 			<section id="one" class="wrapper style1 align-center">
