Add info text with tracking

--- a/index.html
+++ b/index.html
@@ -45,25 +45,37 @@
 
 			<!-- Banner -->
 			  <section id="banner">
-			    <h2>Manage your cap table online</h2>
+			    <h2>Smart Shareholder Management</h2>
 			    <div class="row 200%">
 			      <section class="4u 12u$(small)">
 			        <!-- <i class="icon big rounded fa-pie-chart"></i>
 			        <p>Keep track of your company's shares</p> -->
 			        <i class="icon big rounded fa-flag-o"></i>
 			        <p>All information in one place</p>
-			      </section>
+							<div id="information">
+								<a>Read More</a>
+								<div onclick="showInfo(this);" class="info">Lorem ipsum dolor sit amet, no quo perpetua patrioque gloriatur, cu quo amet impedit. Persius percipit vituperata cum te, nominati quaerendum ex ius, quas impedit in usu.</div>
+							</div>
+							</section>
 			      <section class="4u 12u$(small)">
 			        <!-- <i class="icon big rounded fa-pencil"></i>
 			        <p>Do it yourself in minutes</p> -->
 			        <i class="icon big rounded fa-clock-o"></i>
 			        <p>See the full history</p>
+							<div id="history">
+								<a>Read More</a>
+								<div onclick="showInfo(this);" class="info">Lorem ipsum dolor sit amet, no quo perpetua patrioque gloriatur, cu quo amet impedit. Persius percipit vituperata cum te, nominati quaerendum ex ius, quas impedit in usu.</div>
+							</div>
 			      </section>
 			      <section class="4u$ 12u$(small)">
 			        <!-- <i class="icon big rounded fa-check-circle-o"></i>
 			        <p>Automated integrity checking</p> -->
 			        <i class="icon big rounded fa-check-circle-o"></i>
 			        <p>Trust your data</p>
+							<div id="trust">
+								<a>Read More</a>
+								<div onclick="showInfo(this);" class="info">Lorem ipsum dolor sit amet, no quo perpetua patrioque gloriatur, cu quo amet impedit. Persius percipit vituperata cum te, nominati quaerendum ex ius, quas impedit in usu.</div>
+							</div>
 			      </section>
 			    </row>
 			  </section>
