--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			        <p>Keep track of your company's shares</p> -->
 			        <i class="icon big rounded fa-flag-o"></i>
 			        <p>All information in one place</p>
-							<div id="information">
+							<div id="information_in_one_place">
 								<a>Read More</a>
 								<div onclick="showInfo(this);" class="info">Lorem ipsum dolor sit amet, no quo perpetua patrioque gloriatur, cu quo amet impedit. Persius percipit vituperata cum te, nominati quaerendum ex ius, quas impedit in usu.</div>
 							</div>
@@ -80,15 +80,50 @@
 			    </row>
 			  </section>
 
-		<!-- One -->
-			<section id="one" class="wrapper style1 align-center">
+			<!-- One -->
+				<section id="two" class="wrapper style1 align-center">
+					<div class="container">
+						<h2>Available to early adopters in September</h2>
+							<form action="https://formspree.io/apply@ledgy.com" method="POST">
+								<input type="text" placeholder="Your Name" name="Name">
+								<input type="email" placeholder="your.name@email.com" name="Mail">
+								<input type="submit" value="Apply Now" class="button">
+							</form>
+					</div>
+				</section>
+
+
+				<section id="one" class="wrapper style2 align-center">
 				<div class="container">
-					<h2>Available to early adopters in September</h2>
-						<form action="https://formspree.io/apply@ledgy.com" method="POST">
-							<input type="text" placeholder="Your Name" name="Name">
-							<input type="email" placeholder="your.name@email.com" name="Mail">
-							<input type="submit" value="Apply Now" class="button">
-						</form>
+					<header>
+						<h2>The Vision</h2>
+					</header>
+					<div class="row 200%">
+						<section class="4u 12u$(small)">
+							<i class="icon big rounded fa-clock-o"></i>
+							<p>Employee Incentive Program</p>
+							<div id="esop">
+								<a>Read More</a>
+								<div onclick="showVision(this);" class="info">Lorem ipsum dolor sit amet, no quo perpetua patrioque gloriatur, cu quo amet impedit. Persius percipit vituperata cum te, nominati quaerendum ex ius, quas impedit in usu.</div>
+							</div>
+						</section>
+						<section class="4u 12u$(small)">
+							<i class="icon big rounded fa-comments"></i>
+							<p>Smart Contracts</p>
+							<div id="smart_contracts">
+								<a>Read More</a>
+								<div onclick="showVision(this);" class="info">Lorem ipsum dolor sit amet, no quo perpetua patrioque gloriatur, cu quo amet impedit. Persius percipit vituperata cum te, nominati quaerendum ex ius, quas impedit in usu.</div>
+							</div>
+							</section>
+						<section class="4u$ 12u$(small)">
+							<i class="icon big rounded fa-user"></i>
+							<p>BLOCKCHAIN!!11</p>
+							<div id="blockchain">
+								<a>Read More</a>
+								<div onclick="showVision(this);" class="info">Lorem ipsum dolor sit amet, no quo perpetua patrioque gloriatur, cu quo amet impedit. Persius percipit vituperata cum te, nominati quaerendum ex ius, quas impedit in usu.</div>
+							</div>
+							</section>
+					</div>
 				</div>
 			</section>
 
