--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					</header>
 					<div class="row 200%">
 						<section class="4u 12u$(small)">
-							<i class="icon big rounded fa-clock-o"></i>
+							<i class="icon big rounded fa-users"></i>
 							<p>Employee Incentive Program</p>
 							<div id="esop">
 								<a>Read More</a>
@@ -108,7 +108,7 @@
 							</div>
 						</section>
 						<section class="4u 12u$(small)">
-							<i class="icon big rounded fa-comments"></i>
+							<i class="icon big rounded fa-file-text-o"></i>
 							<p>Smart Contracts</p>
 							<div id="smart_contracts">
 								<a>Read More</a>
@@ -116,7 +116,7 @@
 							</div>
 							</section>
 						<section class="4u$ 12u$(small)">
-							<i class="icon big rounded fa-user"></i>
+							<i class="icon big rounded fa-chain"></i>
 							<p>BLOCKCHAIN!!11</p>
 							<div id="blockchain">
 								<a>Read More</a>
@@ -144,7 +144,7 @@
 
 							<ul class="icons">
 								<li><a href="https://twitter.com/LedgyCom" class="icon rounded fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.facebook.com/LedgyCom/" class="icon rounded fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.facebook.com/LedgyCom" class="icon rounded fa-facebook"><span class="label">Facebook</span></a></li>
 							</ul>
 						</section>
 					</div>
