--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 			        <p>All information in one place</p>
 							<div id="information_in_one_place">
 								<a>Read More</a>
-								<div onclick="showInfo(this);" class="info">Lorem ipsum dolor sit amet, no quo perpetua patrioque gloriatur, cu quo amet impedit. Persius percipit vituperata cum te, nominati quaerendum ex ius, quas impedit in usu.</div>
+								<div onclick="showVision(this);" class="info">
+									No more scattering of your cap table to different locations, file formats and versions.
+									Just send a link to your cap table to your co-workers and investors.
+								</div>
 							</div>
 							</section>
 			      <section class="4u 12u$(small)">
@@ -64,7 +67,10 @@
 			        <p>See the full history</p>
 							<div id="history">
 								<a>Read More</a>
-								<div onclick="showInfo(this);" class="info">Lorem ipsum dolor sit amet, no quo perpetua patrioque gloriatur, cu quo amet impedit. Persius percipit vituperata cum te, nominati quaerendum ex ius, quas impedit in usu.</div>
+								<div onclick="showVision(this);" class="info">
+									Always keep track of the history of your cap table.
+									See a list of all transactions or visualize the development of your shares.
+								</div>
 							</div>
 			      </section>
 			      <section class="4u$ 12u$(small)">
@@ -74,7 +80,10 @@
 			        <p>Trust your data</p>
 							<div id="trust">
 								<a>Read More</a>
-								<div onclick="showInfo(this);" class="info">Lorem ipsum dolor sit amet, no quo perpetua patrioque gloriatur, cu quo amet impedit. Persius percipit vituperata cum te, nominati quaerendum ex ius, quas impedit in usu.</div>
+								<div onclick="showVision(this);" class="info">
+									Worried that your cap table may grow larger and larger and eventually contain hard-to-find errors?
+									Don’t panic, we have everything under control!
+								</div>
 							</div>
 			      </section>
 			    </row>
@@ -104,7 +113,10 @@
 							<p>Employee Incentive Program</p>
 							<div id="esop">
 								<a>Read More</a>
-								<div onclick="showVision(this);" class="info">Lorem ipsum dolor sit amet, no quo perpetua patrioque gloriatur, cu quo amet impedit. Persius percipit vituperata cum te, nominati quaerendum ex ius, quas impedit in usu.</div>
+								<div onclick="showVision(this);" class="info">
+									Motivate your employees with shares using our new ESOP module!
+									Including a live view of an employee’s stock options.
+								</div>
 							</div>
 						</section>
 						<section class="4u 12u$(small)">
@@ -112,15 +124,21 @@
 							<p>Smart Contracts</p>
 							<div id="smart_contracts">
 								<a>Read More</a>
-								<div onclick="showVision(this);" class="info">Lorem ipsum dolor sit amet, no quo perpetua patrioque gloriatur, cu quo amet impedit. Persius percipit vituperata cum te, nominati quaerendum ex ius, quas impedit in usu.</div>
+								<div onclick="showVision(this);" class="info">
+									Enforce your Shareholders’ Agreement through our Smart Contract system.
+									No more hassle dealing with incomprehensible texts, our system tells you what you need to do!
+								</div>
 							</div>
 							</section>
 						<section class="4u$ 12u$(small)">
 							<i class="icon big rounded fa-chain"></i>
-							<p>BLOCKCHAIN!!11</p>
+							<p>Blockchain-enabled</p>
 							<div id="blockchain">
 								<a>Read More</a>
-								<div onclick="showVision(this);" class="info">Lorem ipsum dolor sit amet, no quo perpetua patrioque gloriatur, cu quo amet impedit. Persius percipit vituperata cum te, nominati quaerendum ex ius, quas impedit in usu.</div>
+								<div onclick="showVision(this);" class="info">
+									Convert your shares into a Token and raise funding from international investors.
+									Crowdfunding with a single click!
+								</div>
 							</div>
 							</section>
 					</div>
