--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<a>Read More</a>
 								<div onclick="showVision(this);" class="info">
 									No more scattering of your cap table to different locations, file formats and versions.
-									Just send a link to your cap table to your co-workers and investors.
+									Just send a link to your cap table to co-workers and investors.
 								</div>
 							</div>
 							</section>
@@ -68,7 +68,7 @@
 							<div id="history">
 								<a>Read More</a>
 								<div onclick="showVision(this);" class="info">
-									Always keep track of the history of your cap table.
+									Keeping track of your cap table’s history enables quick auditing.
 									See a list of all transactions or visualize the development of your shares.
 								</div>
 							</div>
@@ -114,8 +114,8 @@
 							<div id="esop">
 								<a>Read More</a>
 								<div onclick="showVision(this);" class="info">
-									Motivate your employees with shares using our new ESOP module!
-									Including a live view of an employee’s stock options.
+									Motivate your employees with shares using our new ESOP/PSOP module,
+									including a live view of every employee’s stock options.
 								</div>
 							</div>
 						</section>
@@ -126,7 +126,7 @@
 								<a>Read More</a>
 								<div onclick="showVision(this);" class="info">
 									Enforce your Shareholders’ Agreement through our Smart Contract system.
-									No more hassle dealing with incomprehensible texts, our system tells you what you need to do!
+									No more hassle dealing with incomprehensible texts, our system tells you what you need to do.
 								</div>
 							</div>
 							</section>
@@ -137,7 +137,7 @@
 								<a>Read More</a>
 								<div onclick="showVision(this);" class="info">
 									Convert your shares into a Token and raise funding from international investors.
-									Crowdfunding with a single click!
+									Crowdfunding with a single click.
 								</div>
 							</div>
 							</section>
