update tagManager code

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			        <p>All information in one place</p>
 							<div id="information_in_one_place">
 								<a>Read More</a>
-								<div onclick="showVision(this);" class="info">
+								<div onclick="showInfo(this);" class="info">
 									No more scattering of your cap table to different locations, file formats and versions.
 									Just send a link to your cap table to co-workers and investors.
 								</div>
@@ -67,7 +67,7 @@
 			        <p>See the full history</p>
 							<div id="history">
 								<a>Read More</a>
-								<div onclick="showVision(this);" class="info">
+								<div onclick="showInfo(this);" class="info">
 									Keeping track of your cap table’s history enables quick auditing.
 									See a list of all transactions or visualize the development of your shares.
 								</div>
@@ -80,7 +80,7 @@
 			        <p>Trust your data</p>
 							<div id="trust">
 								<a>Read More</a>
-								<div onclick="showVision(this);" class="info">
+								<div onclick="showInfo(this);" class="info">
 									Worried that your cap table may grow larger and larger and eventually contain hard-to-find errors?
 									Don’t panic, we have everything under control!
 								</div>
