--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<!-- One -->
 				<section id="two" class="wrapper style1 align-center">
 					<div class="container">
-						<h2>Available to early adopters in September</h2>
+						<h2>Available now to early adopters</h2>
 							<form action="https://formspree.io/apply@ledgy.com" method="POST">
 								<input type="text" placeholder="Your Name" name="Name">
 								<input type="email" placeholder="your.name@email.com" name="Mail">
