--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							<form action="https://formspree.io/apply@ledgy.com" method="POST">
 								<input type="text" placeholder="Your Name" name="Name">
 								<input type="email" placeholder="your.name@email.com" name="Mail">
-								<input type="submit" value="Apply Now" class="button">
+								<input type="submit" value="Apply" class="button">
 							</form>
 					</div>
 				</section>
