Change "trust your data" to "security first"

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			        <!-- <i class="icon big rounded fa-pencil"></i>
 			        <p>Do it yourself in minutes</p> -->
 			        <i class="icon big rounded fa-clock-o"></i>
-			        <p>See the full history</p>
+			        <p>Be ready for audits</p>
 							<div id="history">
 								<a>Read More</a>
 								<div onclick="showInfo(this);" class="info">
@@ -100,13 +100,13 @@
 			      <section class="4u$ 12u$(small)">
 			        <!-- <i class="icon big rounded fa-check-circle-o"></i>
 			        <p>Automated integrity checking</p> -->
-			        <i class="icon big rounded fa-check-circle-o"></i>
-			        <p>Trust your data</p>
+			        <i class="icon big rounded fa-key"></i>
+			        <p>Security first</p>
 							<div id="trust">
 								<a>Read More</a>
 								<div onclick="showInfo(this);" class="info">
-									Worried that your cap table may grow larger and larger and eventually contain hard-to-find errors?
-									The transactions are automatically checked for inconsistencies.
+									As a swiss company we guarantee the best protection of your sensible data.
+									Everything is hosted in Europe and regular backups ensure that nothing is ever lost.
 								</div>
 							</div>
 			      </section>
