--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
 
 			<!-- Banner -->
 			  <section id="banner">
-			    <h2>Smart Shareholder Management</h2>
+			    <h2>Online Share Register</h2>
+					<h3>Make your life easy with the leading share register and cap table tool for Switzerland. </h3>
 					<a href="https://demo.ledgy.com" class="button" type="button">Launch Demo</a>
 			  </section>
 
 			<!-- One -->
 				<section id="two" class="wrapper style1 align-center">
 					<div class="container">
-						<h2>Available now to beta testers</h2>
+						<h2>Available now to early adopters</h2>
 						<p>Interested? Drop us your email and we will get in touch with you.</p>
 							<form action="https://formspree.io/apply@ledgy.com" method="POST">
 								<input type="text" placeholder="Your Name" name="Name">
@@ -68,7 +69,7 @@
 				<section id="one" class="wrapper style2 align-center">
 				<div class="container">
 					<header>
-						<h2>Why use Ledgy?</h2>
+						<h2>Why use Ledgy for your company?</h2>
 					</header>
 					<div class="row 200%">
 			      <section class="4u 12u$(small)">
@@ -79,8 +80,9 @@
 							<div id="information_in_one_place">
 								<a>Read More</a>
 								<div onclick="showInfo(this);" class="info">
-									No more scattering of your cap table to different locations, file formats and versions.
-									Just send a link to your cap table to co-workers and investors.
+									No more scattering of your cap table to different locations and versions.
+									Share via a link with your shareholders.
+									Save all related documents in one place in the secure cloud.
 								</div>
 							</div>
 						</section>
@@ -88,12 +90,12 @@
 			        <!-- <i class="icon big rounded fa-pencil"></i>
 			        <p>Do it yourself in minutes</p> -->
 			        <i class="icon big rounded fa-clock-o"></i>
-			        <p>Be ready for audits</p>
+			        <p>Have it under control</p>
 							<div id="history">
 								<a>Read More</a>
 								<div onclick="showInfo(this);" class="info">
-									Keeping track of your cap table’s history enables quick auditing.
-									See a list of all transactions or visualize the development of your shares.
+									Keeping track of your cap table’s history prepares you for future audits.
+									Inconsistencies in your transactions are automatically detected.
 								</div>
 							</div>
 			      </section>
@@ -101,12 +103,13 @@
 			        <!-- <i class="icon big rounded fa-check-circle-o"></i>
 			        <p>Automated integrity checking</p> -->
 			        <i class="icon big rounded fa-key"></i>
-			        <p>Security first</p>
+			        <p>Great features coming soon</p>
 							<div id="trust">
 								<a>Read More</a>
 								<div onclick="showInfo(this);" class="info">
-									As a swiss company we guarantee the best protection of your sensible data.
-									Everything is hosted in Europe and regular backups ensure that nothing is ever lost.
+									Management of employee incentive plans.
+									Login for shareholders so they can keep their data up-to-date and track their stake.
+									Send automatic tax reports to shareholders.
 								</div>
 							</div>
 			      </section>
