--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 	<div id="cspio-page">
 		<div id="cspio-content">
 						    				
-			<h1 id="cspio-headline">Coming Soon Page</h1>			    				
+			<h1 id="cspio-headline">Coming Soon</h1>			    				
 			
 			<div id="cspio-description">Get ready! Something really cool is coming!</div>			    				
 			
